--- a/public/style.css
+++ b/public/style.css
@@ -1,11 +1,12 @@
 body{
-    font-family: 'Nunito';
+    font-family: 'Baloo Bhai 2', cursive;
 }
 
 h2{
     font-size: 18px;
     padding: 10px 20px;
-    color: #575ed8;
+    color:rgb(15, 156, 15);
+    background-color: lightsalmon;
 }
 
 #mario-chat{
@@ -14,29 +15,31 @@ h2{
     border: 1px solid #ddd;
     box-shadow: 1px 3px 5px rgba(0,0,0,0.05);
     border-radius: 2px;
+    background-color: lightseagreen;
 }
 
 #chat-window{
     height: 400px;
      /* overflow: auto; */
     background: #f9f9f9;
+    background-color:lightyellow;
 }
 
-#output p{
+#output {
     padding: 14px 0px;
     margin: 0 20px;
     border-bottom: 1px solid #e9e9e9;
     color: #555;
 }
 
-#feedback p{
+#feedback {
     color: #aaa;
     padding: 14px 0px;
     margin: 0 20px;
 }
 
 #output strong{
-    color: #575ed8;
+    color:  rgba(255, 0, 0, 0.815);
 }
 
 label{
@@ -54,12 +57,12 @@ input{
     width: 100%;
     background: #fff;
     border-bottom: 1px solid #eee;
-    font-family: Nunito;
+    
     font-size: 16px;
 }
 
 button{
-    background: #575ed8;
+    background: red;
     color: #fff;
     font-size: 18px;
     border: 0;
